Fix tooltips on mobile
Previously they were being cut off on the right side

--- a/css/network.css
+++ b/css/network.css
@@ -3,6 +3,10 @@
 	max-width:980px;
 	color:#222222;
 }
+@media only screen and (max-width: 700px) { 
+	#container { font-size: 10px; } 
+	ul { padding-left: 10px; }
+}
 #tooltip {
 	position: absolute;
 	padding: 8px;
